# hello-rusty

./: .gitignore  .ignore
godot/: hello-rusty.gdextension  icon.svg.import  project.godot
godot/.godot/editor/: filesystem_cache8  project_metadata.cfg
godot/assets/: Knight.glb.import  Knight_knight_texture.png.import  knight_texture.png.import
godot/scene/: knight.tscn  map.tscn  map_3d.tscn  player.gd  player.tscn
rust/: Cargo.toml
rust/src/: knight.rs  lib.rs  player.rs
